my-shoppingcart/src/styles/HomePage.css
@import './root.css';

nav{
    display: flex !important;
    justify-content:space-around;
    align-items: center;
    align-content: center;
    align-self: center;
    padding: 1em;
}

ul{
    display: flex;
    justify-content: center;
    gap: 1rem;
}

li{
    list-style: none;
   
}

a{
    text-decoration: none;
    color: var(--TextandBtn-color) !important;
}

body{
    background: var(--BgandBtntext-color);
    color: var(--TextandBtn-color) !important;
    font-family: var(--text-fontfamily);
    font-weight: var(--font-weight);
}

.Logo{
    font-size: 2em;
}

.Links{
    font-size: 1.3em;
}

.jewelry{
    max-width: 100%;
    position: fixed;
    height: auto;
}

.pic{
    width: 100vw;
    display: flex;
    justify-content: center;
}
.hamburger{
display: none; 
cursor: pointer;
flex-direction: column;
justify-content: space-between;
width: 30px;
height: 21px;
}

.hamburger .line {
height: 3px;
background-color: rgb(18, 16, 16);
border-radius: 3px;
transition: all 0.3s ease;
}

 .mobile-menu{
    display: none;
}

@media screen and (max-width: 480px) {
    .jewelry{
       visibility: hidden;
    }
    
    .hamburger{
        display: flex;
      }
    nav{
        display: flex !important;
       justify-content: flex-end;
        padding: 1em;
        
    }
    .Links, .Logo{
        display: none;
    }

 .mobile-menu ul {
    flex-direction: column;
    gap: 1rem;
    align-items: center;
   position: relative;
   top: 1rem;
 }

.top{
    padding: 1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid grey;
}



 .mobile-menu p {
    font-size: 1.8rem !important;
    margin-left: 1rem;
}


  

    .mobile-menu {
        position: fixed;
        top: 0;
        right: -100%; 
        width: 100%;
        height: 100%;
        background-color: #fff;
        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
        transition: right 0.3s ease-in-out; 
    }
    
    .mobile-menu ul {
        list-style: none;
        margin: 0;
        padding: 0;
        text-align: center;
    }
    
   /* .mobile-menu ul li {
        margin: 20px 0;
    }*/
    
    .mobile-menu ul li a {
        text-decoration: none;
        color: #333;
        font-size: 1.5rem;
    }
    
    
    .mobile-menu.open {
        right: 0; }
}


@media screen and (min-width: 500px) and (max-width: 1000px){
    .jewelry{
        max-width: 100vw;
        position: fixed;
        height: 100vh;
    }
}

